Bug 171805 - false error message asking for request for bug report by knode 0.99.01
Summary: false error message asking for request for bug report by knode 0.99.01
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-28 17:46 UTC by Sander J
Modified: 2009-08-23 19:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sander J 2008-09-28 17:46:26 UTC
Version:           0.99.01 (using KDE 4.1.1)
OS:                Linux
Installed from:    Ubuntu Packages

Knode 0.99.01 is reporting an "Internal Error" and asking me to "send a full bug report', but that is nonsense (IMHO): the server responses with '502 ...' which is RFC977-correct (as I'm approaching from outside my ISP domain) and knode should just handle it as a normal/possible server response. And thus not as an Internal Error.


knode error message popup:

"Internal Error
Please send a full bug report at http://bugs.kde.org
Unexpected server response to CONNECT command:
502 news.tiscali.nl: Access denied to your node"
Comment 1 Bernd Weigelt 2008-12-19 20:21:41 UTC
I got this IMHO also false error: 
openSuSE 11.1 and 11.0
looks a little bit like a timeout from the server, before this message i have wait more then 150 secs, but if i use knode 0.10.9, everything is ok.


Interner Fehler
Bitte senden Sie einen ausführlichen Problembericht an http://bugs.kde.org
Unerwartete Serverantwort auf GROUP-Befehl:
205 Timeout after 150 seconds, articles 0, bytes 0, groups 4, posts 0, postbytes 0

from .xsessions-error:
kio_nntp(15204): Unexpected response to  "GROUP"  command: ( 205 )  205 Timeout after 150 seconds, articles 0, bytes 0, groups 4, posts 0, postbytes 0


Comment 2 Marcus Better 2009-02-23 16:03:12 UTC
Here is another one: 

"Internt fel.
Skicka in en fullständig felrapport på http://bugs.kde.org
Oväntat svar från servern för kommandot CONNECT:
400 load at 17.49, try later"

In other words the server is a bit overloaded currently. That should be handled gracefully, not with an "Internal error".

KDE 4.2.0, knode 0.99.01 on Debian.
Comment 3 Olivier Trichet 2009-08-23 19:47:03 UTC
SVN commit 1014745 by otrichet:

Upon possible errors, returns more sensible error code and message than KIO::ERR_INTERNAL with a default message saying "An unexpected error occurs"

BUG: 171805
BUG: 192829

 M  +21 -7     nntp.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1014745