Upon possible errors, returns more sensible error code and message than KIO::ERR_INTERNAL with a default message saying "An unexpected error occurs"

BUG: 171805
BUG: 192829

svn path=/trunk/KDE/kdepimlibs/; revision=1014745